# the-modern-cpp-challenge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py  requirements.txt
1-2-najwiekszy_wspolny_dzielnik/: CMakeLists.txt
src/: CMakeLists.txt
src/000-template_challenge/: CMakeLists.txt  solution.hpp  tests.cpp
src/001-sum_of_naturals_divisible_by_3_or_5/: CMakeLists.txt  solution.cpp  solution.hpp  tests.cpp
src/001-sum_of_naturals_divisible_by_3_or_5/include/sum_of_naturals_divisible_by_3_or_5/: solution.hpp
src/002-greatest_common_divisor/: CMakeLists.txt  solution.cpp  solution.hpp  tests.cpp
src/002-greatest_common_divisor/include/greatest_common_divisor/: solution.hpp
src/003-least_common_multiple/: CMakeLists.txt  solution.cpp  solution.hpp  tests.cpp
src/003-least_common_multiple/include/least_common_multiple/: solution.hpp
src/004-largest_prime_smaller_than_given_number/: CMakeLists.txt  solution.cpp  solution.hpp  tests.cpp
src/004-largest_prime_smaller_than_given_number/include/largest_prime_smaller_than_given_number/: solution.hpp
src/005-sexy_prime_pairs/: CMakeLists.txt  solution.hpp  tests.cpp
src/005-sexy_prime_pairs/include/sexy_prime_pairs/: solution.hpp
src/006-abundant_numbers/: CMakeLists.txt  solution.hpp  tests.cpp
src/006-abundant_numbers/include/abundant_numbers/: solution.hpp
src/007-amicable_numbers/: CMakeLists.txt  solution.hpp  tests.cpp
src/007-amicable_numbers/include/amicable_numbers/: solution.hpp
src/008-armstrong_numbers/: CMakeLists.txt  solution.hpp  tests.cpp
src/008-armstrong_numbers/include/armstrong_numbers/: solution.hpp
src/015-ipv4_address/: CMakeLists.txt  ipv4_address.cpp  ipv4_address.hpp  tests.cpp
src/015-ipv4_address/include/ipv4_address/: ipv4_address.hpp
src/015-ipv4_address/src/: ipv4_address.cpp
src/015-ipv4_data_type/: CMakeLists.txt
src/015-ipv4_data_type/src/: IPv4Address.cpp
src/023-binary_to_string_conversion/: BinToStrConverter.hpp  CMakeLists.txt  tests.cpp
src/023-binary_to_string_conversion/include/binary_to_string_conversion/: BinToStrConverter.hpp
src/023-binary_to_string_conversion/src/: BinToStrConverter.cpp
src/024-string_to_binary_convertion/: CMakeLists.txt
src/024-string_to_binary_convertion/include/string_to_binary_convertion/: StrToBinConverter.hpp
src/024-string_to_binary_convertion/src/: StrToBinConverter.cpp
src/025-capitalizing_an_article_title/: CMakeLists.txt
src/025-capitalizing_an_article_title/include/capitalizing_an_article_title/: TitleCapitalizer.hpp
src/025-capitalizing_an_article_title/src/: TitleCapitalizer.cpp
src/045-priority_queue/: CMakeLists.txt  solution.hpp  tests.cpp
src/046-circular_buffer/: CMakeLists.txt  solution.hpp  tests.cpp
src/047-double_buffering/: CMakeLists.txt  solution.hpp  tests.cpp
src/048-most_frequent_element_in_dataset/: CMakeLists.txt  solution.hpp  tests.cpp
src/061-concurrent_transform_algorithm/: CMakeLists.txt  solution.hpp  tests.cpp
src/067-password_validation/: CMakeLists.txt  solution.cpp  solution.hpp  tests.cpp
src/073-data_serialization_to_file/: CMakeLists.txt  movies-list.xml  solution.cpp  solution.hpp  tests.cpp
src/1-sum_of_naturals_divisible_by_3_and_5/: CMakeLists.txt  main.cpp  solution.hpp  tests.cpp
src/1-sum_of_naturals_divisible_by_3_or_5/: CMakeLists.txt  solution.hpp  tests.cpp
src/15-ipv4_data_type/: CMakeLists.txt  main.cpp  solution.cpp  solution.hpp  tests.cpp
src/17-creating_a_2d_array_with_basic_operations/: Array2D.cpp  Array2D.hpp  CMakeLists.txt  exceptions.hpp  tests.cpp
src/2-greatest_common_divisor/: CMakeLists.txt  main.cpp  tests.cpp
src/2-greatest_common_divisor copy/: CMakeLists.txt
src/2-greatest_common_divisor copy/include/2-greatest_common_divisor/: solution.hpp
src/3-least_common_multiple/: CMakeLists.txt  main.cpp  solution.hpp  tests.cpp
src/4-largest_prime_smaller_than_given_number/: CMakeLists.txt  main.cpp  solution.hpp  tests.cpp
src/5-sexy_prime_pairs/: CMakeLists.txt  main.cpp  tests.cpp
src/6-abundant_numbers/: CMakeLists.txt  main.cpp  solution.hpp  tests.cpp
src/7-amicable_numbers/: CMakeLists.txt  main.cpp  solution.hpp  tests.cpp
src/8-armstrong_numbers/: CMakeLists.txt  main.cpp  solution.hpp  tests.cpp
tests/: 1-sum_of_naturals_divisible_by_3_and_5  1-sum_of_naturals_divisible_by_3_or_5  CMakeLists.txt
tests/001-sum_of_naturals_divisible_by_3_or_5/: CMakeLists.txt  sum_of_naturals_divisible_by_3_or_5.cpp
tests/002-greatest_common_divisor/: CMakeLists.txt  greatest_common_divisor.cpp
tests/003-least_common_multiple/: CMakeLists.txt  least_common_multiple.cpp
tests/004-largest_prime_smaller_than_given_number/: CMakeLists.txt  largest_prime_smaller_than_given_number.cpp
tests/005-sexy_prime_pairs/: CMakeLists.txt  sexy_prime_pairs.cpp
tests/006-abundant_numbers/: CMakeLists.txt  abundant_numbers.cpp
tests/007-amicable_numbers/: CMakeLists.txt  amicable_numbers.cpp
tests/008-armstrong_numbers/: CMakeLists.txt  armstrong_numbers.cpp
tests/015-ipv4_address/: CMakeLists.txt  ipv4_address.cpp
tests/015-ipv4_data_type/: CMakeLists.txt
tests/023-binary_to_string_conversion/: CMakeLists.txt  binary_to_string_conversion.cpp
tests/024-string_to_binary_convertion/: CMakeLists.txt  unit_tests.cpp
tests/025-capitalizing_an_article_title/: CMakeLists.txt  unit_tests.cpp
tests/1-sum_of_naturals_divisible_by_3_or_5/: 1-sum_of_naturals_divisible_by_3_or_5.cpp  CMakeLists.txt
tests/15-ipv4_data_type/: 15-ipv4_data_type.cpp  CMakeLists.txt
tests/2-greatest_common_divisor/: 2-greatest_common_divisor.cpp  CMakeLists.txt
tests/3-least_common_multiple/: 3-least_common_multiple.cpp  CMakeLists.txt
tests/4-largest_prime_smaller_than_given_number/: 4-largest_prime_smaller_than_given_number.cpp  CMakeLists.txt
tests/5-sexy_prime_pairs/: 5-sexy_prime_pairs.cpp  CMakeLists.txt
tests/6-abundant_numbers/: 6-abundant_numbers.cpp  CMakeLists.txt
tests/7-amicable_numbers/: 7-amicable_numbers.cpp  CMakeLists.txt
tests/8-armstrong_numbers/: 8-armstrong_numbers.cpp  CMakeLists.txt
(+17 files in other folders)
