cmake_minimum_required(VERSION 3.17)

# Chapter 1. Math problems
add_subdirectory(001-sum_of_naturals_divisible_by_3_or_5)
add_subdirectory(002-greatest_common_divisor)
add_subdirectory(003-least_common_multiple)
add_subdirectory(004-largest_prime_smaller_than_given_number)
add_subdirectory(005-sexy_prime_pairs)
add_subdirectory(006-abundant_numbers)
add_subdirectory(007-amicable_numbers)
add_subdirectory(008-armstrong_numbers)
# add_subdirectory(9-prime_factors_of_a_number)
# add_subdirectory(10-gray_code)
# add_subdirectory(11-converting_numerical_values_to_roman)
# add_subdirectory(12-largest_collatz_sequence)
# add_subdirectory(13-computing_the_value_of_pi)
# add_subdirectory(14-validating_isbns)

# Chapter 2. Language Features
add_subdirectory(015-ipv4_address)
# add_subdirectory(16-enumerating_ipv4_address_in_a_range)
# add_subdirectory(17-creating_a_2d_array_with_basic_operations)
# add_subdirectory(18-minimum_function_with_any_number_of_arguments)

# Chapter 3. Strings and Regular Expressions
add_subdirectory(023-binary_to_string_conversion)
# add_subdirectory(24-string_to_binary_conversion)
# add_subdirectory(25-capitalizing_an_article_title)

# Chapter 4. Streams and Filesystems

# Chapter 5. Date and Time

# Chapter 6. Algorithms and Data Structures
add_subdirectory(045-priority_queue)
add_subdirectory(046-circular_buffer)
add_subdirectory(047-double_buffering)
add_subdirectory(048-most_frequent_element_in_dataset)
# add_subdirectory(049-text_histogram)
# add_subdirectory(050-filtering_list_of_phone_numbers)
# add_subdirectory(051-transforming_list_of_phone_numbers)
# add_subdirectory(052-generating_all_permutations_of_string)
# add_subdirectory(053-average_movie_rating)
# add_subdirectory(054-pairing_algorithm)
# add_subdirectory(055-merge_algorithm)
# add_subdirectory(056-selection_algorithm)
# add_subdirectory(057-sorting_algorithm)
# add_subdirectory(058-shortest_path_between_nodes)
# add_subdirectory(059-weasel_program)
# add_subdirectory(060-game_of_life)

# Chapter 7. Concurrency
# add_subdirectory(061-concurrent_transform_algorithm)
# add_subdirectory(062-concurrent_search_for_min_and_max_using_threads)
# add_subdirectory(063-concurrent_search_for_min_and_max_using_async)
# add_subdirectory(064-concurrent_sort_algorithm)
# add_subdirectory(065-thread_safe_console_output)
# add_subdirectory(066-customer_service_system)

# Chapter 8. Design Patterns
# add_subdirectory(067-password_validation)
# add_subdirectory(068-random_password_generation)
# add_subdirectory(069-social_security_number_generation)
# add_subdirectory(070-approval_system)
# add_subdirectory(071-observable_vector_container)
# add_subdirectory(072-order_price_calculation_with_discounts)

# Chapter 9. Data Serialization

# Chapter 10. Archives, Images, and Databases

# Chapter 11. Cryptography

# Chapter 12. Networking and Services