cmake_minimum_required(VERSION 3.17)

include(GoogleTest)

add_subdirectory(1-sum_of_naturals_divisible_by_3_or_5)
add_subdirectory(2-greatest_common_divisor)
add_subdirectory(3-least_common_multiple)
add_subdirectory(4-largest_prime_smaller_than_given_number)
add_subdirectory(5-sexy_prime_pairs)
add_subdirectory(6-abundant_numbers)
add_subdirectory(7-amicable_numbers)
add_subdirectory(8-armstrong_numbers)

add_subdirectory(15-ipv4_data_type)
