cmake_minimum_required(VERSION 3.17)

include(GoogleTest)

add_subdirectory(001-sum_of_naturals_divisible_by_3_or_5)
add_subdirectory(002-greatest_common_divisor)
add_subdirectory(003-least_common_multiple)
add_subdirectory(004-largest_prime_smaller_than_given_number)
add_subdirectory(005-sexy_prime_pairs)
add_subdirectory(006-abundant_numbers)
add_subdirectory(007-amicable_numbers)
add_subdirectory(008-armstrong_numbers)

add_subdirectory(015-ipv4_data_type)

add_subdirectory(023-binary_to_string_conversion)
